Fix Jira build and runtime issues with Java 17