@@ -40,6 +40,28 @@
             <plugin>
                 <groupId>com.atlassian.maven.plugins</groupId>
                 <artifactId>confluence-maven-plugin</artifactId>
+                <configuration>
+                    <productVersion>${confluence.version}</productVersion>
+                    <productDataVersion>${confluence.version}</productDataVersion>
+                    <enableQuickReload>true</enableQuickReload>
+                    <enableFastdev>false</enableFastdev>
+                    <allowGoogleTracking>false</allowGoogleTracking>
+                    <!-- TODO: Verify if all these add-opens are needed for Confluence ${confluence.version} on Java 17 -->
+                    <jvmArgs>-Xms512m -Xmx1g -server --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED</jvmArgs>
+                    <systemPropertyVariables>
+                        <atlassian.darkfeature.site-wide.shared-drafts>true</atlassian.darkfeature.site-wide.shared-drafts>
+                        <atlassian.darkfeature.site-wide.synchrony.opt-in.disable>true</atlassian.darkfeature.site-wide.synchrony.opt-in.disable>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
